Login signup and Help Pages

--- a/ai-voice-creation.html
+++ b/ai-voice-creation.html
@@ -143,8 +143,8 @@
         <!-- Example content header -->
             <header class="mb-6 relative">
                 <h2 class="text-3xl text-center text-primary font-bold">AI Voice Creation</h2>
-                <img width="90" id="changePicture" class="mx-auto cursor-pointer my-6" src="images/user-edit-image.png" alt="">
-                <img width="24" class="absolute right-0 top-1/2 cursor-pointer w-7" src="images/save-icon.svg" alt="">
+                <img width="90" id="changePicture" class="mx-auto cursor-pointer my-6" src="images/user-edit-image.png" alt="Image">
+                <img width="24" class="absolute right-0 top-1/2 cursor-pointer w-7" src="images/save-icon.svg" alt="Image">
               </header>
       
               <!-- Example form content (use your own form) -->
@@ -193,7 +193,7 @@
                                focus:outline-none focus:ring-2 focus:ring-teal-200"
                         placeholder="Tell the AI what you want it to do, how to do it, when to do it, etc..."
                       />
-                      <img width="28" class="absolute -right-10 top-4 cursor-pointer" src="images/delete-icon.svg" alt="">
+                      <img width="28" class="absolute -right-10 top-4 cursor-pointer" src="images/delete-icon.svg" alt="Image">
                     </div>
                     <div class="my-5">
                         <button type="submit" class="flex w-full justify-center rounded-full bg-secondary px-3 py-2 text-sm/6 font-semibold text-white shadow-xs hover:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">New Instruction</button>
@@ -230,7 +230,7 @@
                   Save
                 </button>
                 <div id="popup" class="fixed left-10 top-0 items-center justify-center bg-black bg-opacity-50 hidden">
-                  <img class="mt-2" src="images/new-group-image.png" alt="">
+                  <img class="mt-2" src="images/new-group-image.png" alt="Image">
                       <button id="closePopup" class="absolute top-0 right-0 mt-6 mr-1 text-gray-600 hover:text-red-600">
                         <i class="bg-darkGray p-2 rounded-full text-white text-xl ri-close-fill"></i>
                       </button>
