--- a/help.html
+++ b/help.html
@@ -133,7 +133,8 @@
           <ul class="list-none flex items-center bg-gray rounded-3xl">
             <li data-toggle="light"
               class="shadow-lg bg-secondary theme-toggle__active theme-toggle__item w-9 h-9 rounded-[50%] flex items-center justify-center cursor-pointer">
-              <img width="20" src="images/icons/light-mode.svg" alt="Light Mode"></li>
+              <img width="20" src="images/icons/light-mode.svg" alt="Light Mode">
+            </li>
             <li data-toggle="dark"
               class="theme-toggle__item w-9 h-9 rounded-[50%] flex items-center justify-center cursor-pointer"><img
                 width="20" src="images/icons/dark-mode.svg" alt="Dark Mode"></li>
@@ -157,8 +158,8 @@
         <section class="get-started-section">
           <div class="container my-5">
             <div class="content-row">
-              <h3 class="text-2xl text-center text-primary font-bold my-12">Getting Started</h3>
-              <p class="text-center text-[18px]">Lorem ipsum dvcffdsvfdsolor sit amet, consectetur adipiscing elit.
+              <h3 class="text-2xl text-center text-primary font-bold mt-12 mb-6">Getting Started</h3>
+              <p class="text-center font-light">Lorem ipsum dvcffdsvfdsolor sit amet, consectetur adipiscing elit.
                 Nulla tempor, libero vel porttitor accumsan, erat ipsum pulvinar nisl, at euismod tellus nibh sit amet
                 enim. Maecenas at ligula velit. Integer in sapien euismod, semper turpis quis, volutpat neque. Duis
                 commodo et sem non ultrices. Aliquam et odio vitae ligula tempor cursus nec non nisl. Mauris nulla
@@ -170,16 +171,23 @@
                 porttitor at.</p>
             </div>
             <div class="max-w-3xl mx-auto mt-10 p-6 rounded-lg">
-              <h2 class="text-2xl font-bold text-center text-primary mb-4">FAQ</h2>
+              <h2 class="text-2xl font-bold text-center text-primary mb-5">FAQ</h2>
 
               <div class="space-y-4">
+
                 <!-- FAQ Item 1 -->
                 <div class="border-b border-gray-300 pb-3 text-primary">
                   <button class="faq-toggle w-full text-left flex justify-between items-center font-semibold py-2">
                     <span>Q: What exactly does Hello Agents AI do?</span>
-                    <span class="faq-icon text-lg"><i class="ri-arrow-down-line"></i></span>
+                    <span class="faq-icon transition duration-500"><svg width="17" height="17" viewBox="0 0 20 20"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M18.6942 9.28585C18.6942 9.66514 18.5378 10.0337 18.2814 10.2901L11.0157 17.5666C10.7478 17.823 10.3792 17.9794 9.99995 17.9794C9.62066 17.9794 9.25209 17.823 8.99566 17.5666L1.72995 10.2901C1.46209 10.0337 1.30566 9.66514 1.30566 9.28585C1.30566 8.90657 1.46209 8.538 1.72995 8.27014L2.55566 7.433C2.82352 7.17657 3.19209 7.02014 3.57138 7.02014C3.95066 7.02014 4.31924 7.17657 4.57566 7.433L7.85709 10.7144V2.85728C7.85709 2.07585 8.50424 1.42871 9.28566 1.42871H10.7142C11.4957 1.42871 12.1428 2.07585 12.1428 2.85728V10.7144L15.4242 7.433C15.6807 7.17657 16.0492 7.02014 16.4285 7.02014C16.8078 7.02014 17.1764 7.17657 17.4442 7.433L18.2814 8.27014C18.5378 8.538 18.6942 8.90657 18.6942 9.28585Z"
+                          fill="#042925" />
+                      </svg>
+                    </span>
                   </button>
-                  <p class="faq-content hidden">
+                  <p class="faq-content hidden text-dark py-4">
                     Hello Agents AI provides intelligent voice AI solutions that automate and enhance your business
                     communications. Our services include 24/7 AI-powered call answering, automated outbound calling,
                     appointment scheduling, customer service, and more.
@@ -190,9 +198,15 @@
                 <div class="border-b border-gray-300 text-primary pb-3">
                   <button class="faq-toggle w-full text-left flex justify-between items-center font-semibold py-2">
                     <span>Q: How does voice AI benefit my business?</span>
-                    <span class="faq-icon text-lg"><i class="ri-arrow-down-line"></i></span>
+                    <span class="faq-icon transition duration-500"><svg width="17" height="17" viewBox="0 0 20 20"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M18.6942 9.28585C18.6942 9.66514 18.5378 10.0337 18.2814 10.2901L11.0157 17.5666C10.7478 17.823 10.3792 17.9794 9.99995 17.9794C9.62066 17.9794 9.25209 17.823 8.99566 17.5666L1.72995 10.2901C1.46209 10.0337 1.30566 9.66514 1.30566 9.28585C1.30566 8.90657 1.46209 8.538 1.72995 8.27014L2.55566 7.433C2.82352 7.17657 3.19209 7.02014 3.57138 7.02014C3.95066 7.02014 4.31924 7.17657 4.57566 7.433L7.85709 10.7144V2.85728C7.85709 2.07585 8.50424 1.42871 9.28566 1.42871H10.7142C11.4957 1.42871 12.1428 2.07585 12.1428 2.85728V10.7144L15.4242 7.433C15.6807 7.17657 16.0492 7.02014 16.4285 7.02014C16.8078 7.02014 17.1764 7.17657 17.4442 7.433L18.2814 8.27014C18.5378 8.538 18.6942 8.90657 18.6942 9.28585Z"
+                          fill="#042925" />
+                      </svg>
+                    </span>
                   </button>
-                  <p class="faq-content hidden">
+                  <p class="faq-content hidden text-dark py-4">
                     Voice AI increases efficiency, reduces costs, improves customer satisfaction, and enhances
                     productivity. Our AI solutions allow you to capture every lead, provide instant support, streamline
                     workflows, and focus on strategic business goals.
@@ -203,18 +217,25 @@
                 <div class="border-b border-gray-300 pb-3 text-primary">
                   <button class="faq-toggle w-full text-left flex justify-between items-center font-semibold py-2">
                     <span>Q: Is your AI technology truly available 24/7?</span>
-                    <span class="faq-icon text-lg"><i class="ri-arrow-down-line"></i></span>
+                    <span class="faq-icon transition duration-500"><svg width="17" height="17" viewBox="0 0 20 20"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M18.6942 9.28585C18.6942 9.66514 18.5378 10.0337 18.2814 10.2901L11.0157 17.5666C10.7478 17.823 10.3792 17.9794 9.99995 17.9794C9.62066 17.9794 9.25209 17.823 8.99566 17.5666L1.72995 10.2901C1.46209 10.0337 1.30566 9.66514 1.30566 9.28585C1.30566 8.90657 1.46209 8.538 1.72995 8.27014L2.55566 7.433C2.82352 7.17657 3.19209 7.02014 3.57138 7.02014C3.95066 7.02014 4.31924 7.17657 4.57566 7.433L7.85709 10.7144V2.85728C7.85709 2.07585 8.50424 1.42871 9.28566 1.42871H10.7142C11.4957 1.42871 12.1428 2.07585 12.1428 2.85728V10.7144L15.4242 7.433C15.6807 7.17657 16.0492 7.02014 16.4285 7.02014C16.8078 7.02014 17.1764 7.17657 17.4442 7.433L18.2814 8.27014C18.5378 8.538 18.6942 8.90657 18.6942 9.28585Z"
+                          fill="#042925" />
+                      </svg>
+                    </span>
                   </button>
-                  <p class="faq-content hidden ">
+                  <p class="faq-content hidden text-dark py-4">
                     Yes, our AI voice systems are available 24 hours a day, 7 days a week, 365 days a year. We ensure
                     your business is always responsive and available to your customers, no matter the time or day.
                   </p>
                 </div>
+
               </div>
             </div>
             <div class="content-row">
-              <h3 class="text-2xl text-center text-primary font-bold my-12">Additional Information</h3>
-              <p class="text-center text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempor,
+              <h3 class="text-2xl text-center text-primary font-bold mt-12 mb-6">Additional Information</h3>
+              <p class="text-center font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempor,
                 libero vel porttitor accumsan, erat ipsum pulvinar nisl, at euismod tellus nibh sit amet enim. Maecenas
                 at ligula velit. Integer in sapien euismod, semper turpis quis, volutpat neque. Duis commodo et sem non
                 ultrices. Aliquam et odio vitae ligula tempor cursus nec non nisl. Mauris nulla turpis, ornare quis nibh
