--- a/index.html
+++ b/index.html
@@ -471,13 +471,13 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="">
+                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="Image">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
@@ -488,13 +488,13 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="">
+                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="Image">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
@@ -505,13 +505,13 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="">
+                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="Image">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
@@ -522,14 +522,14 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden" src="images/eye+file.svg" alt=""
+                        href="#"><img class="white-play-icon lg:block hidden" src="images/eye+file.svg" alt="Image"
                           width="16">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
@@ -540,13 +540,13 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="">
+                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="Image">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
@@ -557,13 +557,13 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="">
+                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="Image">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
@@ -574,13 +574,13 @@
                     <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
-                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="">
+                        href="#"><img class="white-play-icon lg:block hidden size-4" src="images/eye+file.svg" alt="Image">
                         <span class="text-white font-bold text-[10px]">Read Transcript</span></a>
                     </td>
                     <td class="p-2 border-r border-primary">
                       <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                         href="#"><img class="white-play-icon lg:block hidden size-4" src="images/white-play-icon.svg"
-                          alt="">
+                          alt="Image">
                         <span class="text-white font-bold text-[10px]">Play Recording</span></a>
                     </td>
 
