--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   <div
     class="flex min-h-screen flex-col justify-center items-center px-6 py-12 lg:px-8 bg-lightGray relative overflow-hidden">
     <div class="relative z-10 sm:mx-auto sm:w-full sm:max-w-lg bg-white py-20 px-10 rounded-3xl text-center">
-      <a href="index.html"><img width="140" class="mx-auto" src="images/logo.svg" alt="Hello Agent Logo"></a>
+      <a href="index.html"><img width="140" class="mx-auto" src="/images/logo.svg" alt="Hello Agent Logo"></a>
       <h2 class="text-3xl text-primary font-bold mt-10 mb-2">Login</h2>
       <p class="">Welcome back! Please login to access your account.</p>
 
@@ -33,17 +33,28 @@
                 <a href="#" class="underline font-bold text-primary">Forgot password?</a>
               </div>
             </div>
+
+            <!-- Password Field -->
             <div class="mt-2 relative">
-              <input type="password" name="password" id="password" placeholder="Password"
-                autocomplete="current-password" required class="w-full border border-[#1AFFE459] px-3 rounded py-4 bg-[#F8F8F8]
-              focus:outline-none focus:ring-2 focus:ring-teal-200">
-              <div class="cursor-pointer absolute end-0 me-2 top-[50%] translate-y-[-50%]"><svg width="27" height="18"
-                  viewBox="0 0 35 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M34.4632 10.5104C30.3213 5.50536 24.0517 0.687531 17.5001 0.687531C10.9472 0.687531 4.67608 5.50872 0.536979 10.5104C-0.178993 11.3753 -0.178993 12.6307 0.536979 13.4956C1.5776 14.7531 3.75919 17.1805 6.67292 19.3015C14.0111 24.6434 20.9729 24.6552 28.3272 19.3015C31.2409 17.1805 33.4225 14.7531 34.4632 13.4956C35.177 12.6324 35.1807 11.3781 34.4632 10.5104ZM17.5001 4.45935C21.6598 4.45935 25.0437 7.84321 25.0437 12.003C25.0437 16.1628 21.6598 19.5466 17.5001 19.5466C13.3403 19.5466 9.95643 16.1628 9.95643 12.003C9.95643 7.84321 13.3403 4.45935 17.5001 4.45935Z"
-                    fill="#14B8A6" />
-                </svg></div>
+              <input type="password" name="password" id="password1" placeholder="Password"
+                autocomplete="current-password" required
+                class="w-full border border-[#1AFFE459] px-3 rounded py-4 bg-[#F8F8F8] focus:outline-none focus:ring-2 focus:ring-teal-200">
+              <div class="cursor-pointer absolute end-0 me-2 top-[50%] translate-y-[-50%] toggle-password">
+                <!-- Eye Icon (visible by default) -->
+                <svg class="eye-icon" width="27" height="28" viewBox="0 0 35 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.5001 23.3913C20.476 23.3913 22.8884 20.9789 22.8884 18.003C22.8884 15.0271 20.476 12.6147 17.5001 12.6147C14.5242 12.6147 12.1118 15.0271 12.1118 18.003C12.1118 20.9789 14.5242 23.3913 17.5001 23.3913Z" fill="#14B8A6"/>
+                  <path d="M34.4632 16.5104C30.3213 11.5054 24.0517 6.68754 17.5001 6.68754C10.9472 6.68754 4.67608 11.5087 0.536979 16.5104C-0.178993 17.3753 -0.178993 18.6307 0.536979 19.4956C1.5776 20.7531 3.75919 23.1805 6.67292 25.3015C14.0111 30.6434 20.9729 30.6552 28.3272 25.3015C31.2409 23.1805 33.4225 20.7531 34.4632 19.4956C35.177 18.6324 35.1807 17.3781 34.4632 16.5104ZM17.5001 10.4594C21.6598 10.4594 25.0437 13.8432 25.0437 18.003C25.0437 22.1628 21.6598 25.5466 17.5001 25.5466C13.3403 25.5466 9.95643 22.1628 9.95643 18.003C9.95643 13.8432 13.3403 10.4594 17.5001 10.4594Z" fill="#14B8A6"/>
+                </svg>
+                <!-- Eye-Slash Icon (hidden by default) -->
+                <svg class="eye-slash-icon hidden" width="27" height="28" viewBox="0 0 35 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.5001 23.3913C20.476 23.3913 22.8884 20.9789 22.8884 18.003C22.8884 15.0271 20.476 12.6147 17.5001 12.6147C14.5242 12.6147 12.1118 15.0271 12.1118 18.003C12.1118 20.9789 14.5242 23.3913 17.5001 23.3913Z" fill="#14B8A6"/>
+                  <path d="M34.4632 16.5104C30.3213 11.5054 24.0517 6.68754 17.5001 6.68754C10.9472 6.68754 4.67608 11.5087 0.536979 16.5104C-0.178993 17.3753 -0.178993 18.6307 0.536979 19.4956C1.5776 20.7531 3.75919 23.1805 6.67292 25.3015C14.0111 30.6434 20.9729 30.6552 28.3272 25.3015C31.2409 23.1805 33.4225 20.7531 34.4632 19.4956C35.177 18.6324 35.1807 17.3781 34.4632 16.5104ZM17.5001 10.4594C21.6598 10.4594 25.0437 13.8432 25.0437 18.003C25.0437 22.1628 21.6598 25.5466 17.5001 25.5466C13.3403 25.5466 9.95643 22.1628 9.95643 18.003C9.95643 13.8432 13.3403 10.4594 17.5001 10.4594Z" fill="#14B8A6"/>
+                  <path d="M5 5L30 31" stroke="#14B8A6" stroke-width="4" stroke-linecap="round"/>
+                </svg>
+              </div>
             </div>
+            <!-- Password Field -->
+
           </div>
 
           <div>
@@ -58,11 +69,12 @@
       </div>
     </div>
     <div class="absolute -left-[21rem] -top-[20rem] -z-1 border-1 rounded-full overflow-hidden">
-      <img src="images/Ellipse-bg1.png" alt="Image">
+      <img src="/images/Ellipse-bg1.png" alt="Image">
     </div>
   </div>
 
+  <!-- Script -->
+  <script src="/src/password-toggle.js" type="module"></script>
 
 </body>
-
 </html>
