Added audio functionality for Play Recording Btn

--- a/ai-voice-creation.html
+++ b/ai-voice-creation.html
@@ -151,9 +151,9 @@
         <header class="mb-6 relative text-center">
           <h2 class="text-3xl text-primary font-bold">AI Voice Creation</h2>
           <div class="inline-block relative my-6">
-          <img width="90" id="changePicture" class="object-cover" src="/images/grace-img.svg"
+          <img width="90" class="object-cover" src="/images/grace-img.svg"
             alt="Image">
-            <div class="absolute end-0 bottom-0 cursor-pointer">
+            <div id="changePicture" class="absolute end-0 bottom-0 cursor-pointer">
               <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="0.731445" y="0.0571289" width="24.9429" height="24.9429" rx="12.4714" fill="#1AFFE4"/>
                 <g clip-path="url(#clip0_2_653)">
