--- a/index.html
+++ b/index.html
@@ -257,13 +257,12 @@
                   <td class="px-3 py-2 border-r border-primary">001</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -272,10 +271,13 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/1.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
+
                   </td>
                 </tr>
                 <tr class="bg-[#14B8A640] border-b">
@@ -283,13 +285,11 @@
                   <td class="px-3 py-2 border-r border-primary">002</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -298,10 +298,12 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/1.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
                   </td>
                 </tr>
                 <tr class="bg-white border-b">
@@ -309,13 +311,11 @@
                   <td class="px-3 py-2 border-r border-primary">004</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -324,10 +324,12 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/1.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
                   </td>
                 </tr>
                 <tr class="bg-[#14B8A640] border-b border-r">
@@ -335,13 +337,11 @@
                   <td class="px-3 py-2 border-r border-primary">001</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -350,10 +350,12 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/1.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
                   </td>
                 </tr>
                 <tr class="bg-white border-b">
@@ -361,13 +363,11 @@
                   <td class="px-3 py-2 border-r border-primary">002</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -376,10 +376,12 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/2.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
                   </td>
                 </tr>
                 <tr class="bg-[#14B8A640] border-b">
@@ -387,13 +389,11 @@
                   <td class="px-3 py-2 border-r border-primary">003</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -402,10 +402,12 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/1.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
                   </td>
                 </tr>
                 <tr class="bg-white border-b">
@@ -413,13 +415,11 @@
                   <td class="px-3 py-2 border-r border-primary">004</td>
                   <td class="px-3 py-2 border-r border-primary">1/28/25</td>
                   <td class="px-3 py-2">
-                    <div
-                      class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
-                      <div
-                        class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
+                    <!-- Wave Player -->
+                    <div class="player-box flex lg:justify-between justify-center align-middle items-center w-[100%] gap-2 mx-auto">
+                      <div class="play-icon min-w-7 h-7 flex justify-center items-center rounded-full cursor-pointer bg-secondary">
                         <!-- Play Icon (visible by default) -->
-                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg class="play-btn" width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.29 6.77462L0.932558 12.7545L0.932559 0.794722L11.29 6.77462Z" fill="white" />
                         </svg>
                         <!-- Pause Icon (hidden by default) -->
@@ -428,10 +428,12 @@
                           <path d="M2 0.79472H5V12.7545H2V0.79472ZM7 0.79472H10V12.7545H7V0.79472Z" fill="white" />
                         </svg>
                       </div>
-                      <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                      <div class="eco-box w-full bg-gray rounded-lg flex justify-center px-1">
                         <div class="w-full waveform"></div>
                       </div>
+                      <audio src="/audio/3.mp3" preload="auto"></audio>
                     </div>
+                    <!-- Wave Player -->
                   </td>
                 </tr>
               </tbody>
