--- a/help.html
+++ b/help.html
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header class="py-4 px-5 md:px-10 xl:hidden flex items-center justify-between">
       <a href="index.html">
-        <img src="/images/logo.svg" alt="Logo" class="w-[9rem]">
+        <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem]">
       </a>
       <button class="sidebar-toggle p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none ms-3">
         <!-- Hamburger Icon -->
@@ -39,7 +39,7 @@
         <!-- Header with brand + hamburger -->
         <div class="flex items-center justify-between p-4">
           <div class="flex items-center space-x-2">
-            <a href="index.html">
+            <a class="hidden xl:inline" href="index.html">
               <img src="/images/logo.svg" alt="Logo" class="w-[9rem] sidebar__logo-icon hide-on-collapse">
               <img class="hidden sidebar__logo-icon hide-on-collapse" src="/images/logo-icon.svg" alt="Logo">
             </a>
