--- a/voice-creation.html
+++ b/voice-creation.html
@@ -124,19 +124,19 @@
 
             <!-- Settings Submenu -->
             <div id="settingsSubmenu" class="hidden pl-8 mt-1 space-y-1 sidebar-submenu">
-              <a href="set-ai-voice.html"
+              <a href="set-voice.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Set Voice
               </a>
-              <a href="ai-voice-profile.html"
+              <a href="voice-profile.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Voice Profiles
               </a>
-              <a href="ai-voice-creation.html"
+              <a href="voice-creation.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50 bg-gray-100">
                 Voice Creations
               </a>
-              <a href="ai-voice-collection.html"
+              <a href="voice-collection.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Voice Collection
               </a>
@@ -205,7 +205,7 @@
                 </clipPath>
                 </defs>
                 </svg>
-                
+
             </div>
           </div>
           <div class="absolute right-0 top-1/2 cursor-pointer w-7">
@@ -219,7 +219,7 @@
               </clipPath>
               </defs>
               </svg>
-              
+
           </div>
         </header>
 
