--- a/voice-profile.html
+++ b/voice-profile.html
@@ -141,19 +141,19 @@
 
             <!-- Settings Submenu -->
             <div id="settingsSubmenu" class="hidden pl-8 mt-1 space-y-1 sidebar-submenu">
-              <a href="set-ai-voice.html"
+              <a href="set-voice.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Set Voice
               </a>
-              <a href="ai-voice-profile.html"
+              <a href="voice-profile.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50 bg-gray-100">
                 Voice Profiles
               </a>
-              <a href="ai-voice-creation.html"
+              <a href="voice-creation.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Voice Creations
               </a>
-              <a href="ai-voice-collection.html"
+              <a href="voice-collection.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Voice Collection
               </a>
