--- a/set-voice.html
+++ b/set-voice.html
@@ -144,11 +144,11 @@
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50 bg-gray-100">
                 Set Voice
               </a>
-              <a href="voice-profile.html"
+              <a href="voice-profiles.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Voice Profiles
               </a>
-              <a href="voice-creation.html"
+              <a href="voice-creations.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black opacity-50">
                 Voice Creations
               </a>
